# PyPulley

./: .gitignore  .pre-commit-config.yaml  LICENSE  PRE_COMMIT_BUMP_SCRIPT.sh  README.md  cookiecutter.json  pyproject.toml
.github/workflows/: bump_precommit_hooks.yml
hooks/: post_gen_project.py  pre_gen_project.py  pre_prompt.py
resources/: demo_recording.cast
{{ cookiecutter.project_slug }}/: .env  .env copy.example  .env.example  .gitignore  .pre-commit-config.yaml  FIRST_TIME_SETUP.sh  LICENSE  README.md  config_template.toml  pyproject.toml
{{ cookiecutter.project_slug }}/.github/workflows/: run_tests.yml
{{ cookiecutter.project_slug }}/docs/: conf.py  index.rst
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/: main.py
