[tool.poetry]
name = "pypulley"
version = "0.1.0"
description = ""
authors = ["Peter Mason <pm3.141@gmail.com>"]
license = "MIT License"
readme = "README.md"

# https://python-poetry.org/docs/dependency-specification/#version-constraints
[tool.poetry.dependencies]
python = "^3.11"
cookiecutter = "^2.1.1"
sphinx = "^5.3.0"
sphinx-rtd-theme = "^1.1.1"
jinja2 = "^3.1.2"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
blacken-docs = "^1.12.1"
pre-commit = "^3.3.3"
pytest = "^7.1.3"
pytest-mock = "^3.10.0"
ruff = "^0.1.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "C90",
    "I",
    "N",
    "D",
    "UP",
    "YTT",
    "ANN",
    "ASYNC",
    "BLE",
    "B",
    "A",
    "C4",
    "ISC",
    "ICN",
    "G",
    "PT",
    "Q",
    "RSE",
    "RET",
    "SLF",
    "SIM",
    "TID",
    "ARG",
    "PTH",
    "PD",
    "PL",
    "NPY",
]
ignore = ["D203", "D212", "PLR0133", "G004"]
unfixable = []

[tool.ruff.lint.per-file-ignores]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.pydocstyle]
convention = "google"
