{%- set license_classifiers = {
    'MIT License': 'License :: OSI Approved :: MIT License',
    'BSD License': 'License :: OSI Approved :: BSD License',
    'Apache Software License 2.0': 'License :: OSI Approved :: Apache Software License',
    'GNU General Public License v3': 'License :: OSI Approved :: GNU General Public License v3 (GPLv3)'
} %}[tool.poetry]
name = "{{cookiecutter.project_slug}}"
version = "{{cookiecutter.project_version}}"
description = "A short description of the package."
{%- if cookiecutter.license != "Not Open Source" %}
license = "{{cookiecutter.license}}"{% endif %}
authors = ["{{cookiecutter.author}} <{{cookiecutter.email}}>"]
readme = "README.md"
classifiers = [
    'Natural Language :: English',
{%- if cookiecutter.license in license_classifiers %}
    '{{ license_classifiers[cookiecutter.license] }}',
{%- endif %}
    'Programming Language :: Python :: 3',
]
package-mode = true

# How to specify dependency version constraints with Poetry
# https://python-poetry.org/docs/dependency-specification/#version-constraints

[tool.poetry.group.dev.dependencies] # Add development dependencies here

[tool.poetry.dependencies] # Add package/application dependencies here

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.creosote]
venvs = [".venv"]
paths = ["{{cookiecutter.project_slug}}"]
deps-file = "pyproject.toml"
sections = ["project.dependencies"]
{%- if cookiecutter.formatter == 'black' %}

[tool.black]
line-length = 120
{%- endif %}

[tool.ruff]
line-length = 120
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "C90",
    "I",
    "N",
    "D",
    "UP",
    "YTT",
    "ANN",
    "ASYNC",
    "BLE",
    "B",
    "A",
    "C4",
    "ISC",
    "ICN",
    "G",
    "INP",
    "PT",
    "Q",
    "RSE",
    "RET",
    "SLF",
    "SIM",
    "TID",
    "ARG",
    "PTH",
    "ERA",
    "PD",
    "PL",
    "NPY",
]
ignore = ["D203", "D212", "ANN101", "ISC001"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
{%- if cookiecutter.create_sphinx_docs == 'y' %}
"docs/conf.py" = ["INP001"]
{%- endif %}
"tests/*" = ["ANN201", "INP001"]

[tool.ruff.lint.pydocstyle]
convention = "google"
{%- if cookiecutter.create_sphinx_docs == 'y' %}

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = ["copyright"]
{%- endif %}
{%- if cookiecutter.formatter == 'ruff' %}

[tool.ruff.format]
docstring-code-format = true
{%- endif %}

[tool.pytest.ini_options]
addopts = "--cov={{cookiecutter.project_slug}}"
testpaths = ["tests"]
